<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        style="@style/VimTitle"
        android:layout_alignParentTop="true"
        android:text="@string/login" />
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginLeft="5dp"
            android:text="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_user_name"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:text="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et_password"
            android:layout_margin="5dp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/VimBtn"
                android:id="@+id/btn_regist"
                android:onClick="onClick"
                android:layout_margin="10dp"
                android:text="@string/regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                style="@style/VimBtn"
                android:id="@+id/btn_login"
                android:onClick="onClick"
                android:layout_margin="10dp"
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
