<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_background"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_icon"
            android:src="@drawable/profle"
            android:layout_margin="20dp"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/nick_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_nick_name"
                    android:enabled="false"
                    android:hint="@string/lazy_nick"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:id="@+id/iv_edit_nick_name"
                    android:layout_gravity="center"
                    android:src="@drawable/edit"
                    android:layout_width="20dp"
                    android:layout_height="20dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/et_id"
                    android:enabled="false"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginRight="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <EditText
                        android:id="@+id/et_sign"
                        android:enabled="false"
                        android:hint="@string/lazy_sign"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <ImageView
                        android:id="@+id/iv_edit_sign"
                        android:layout_gravity="center"
                        android:src="@drawable/edit"
                        android:layout_width="20dp"
                        android:layout_height="20dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:focusable="true"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <Button
        style="@style/VimBtn"
        android:layout_margin="10dp"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>